--- a/css/mainDark.css
+++ b/css/mainDark.css
@@ -99,10 +99,11 @@ img {
 
 .contentContainerAll {
 	background-color:#1B052F;
-	padding:6em 1em 6em 1em;
+	padding:6em 1em 1em 1em;
 	display: block;
-	height:100%;
+	/*height:100%;*/
 	margin:0 auto;
+	min-height:100%;
 	max-width: 1080px;
 	overflow: auto;
 }
