--- a/css/mainLight.css
+++ b/css/mainLight.css
@@ -100,12 +100,12 @@ img {
 
 .contentContainerAll {
 	background-color:#D9B000;
-	padding:6em 1em 6em 1em;
+	padding:6em 1em 1em 1em;
 	display: block;
-	height:100%;
+	min-height:100%;
+	/*height:100%;*/
 	margin:0 auto;
 	max-width: 1080px;
-	overflow: auto;
 }
 
 .source span:hover {
@@ -127,6 +127,9 @@ img {
   clear: both;
 }
 
+.normalClear {
+	clear: both;
+}
 .containerLeft {
 	float:left;
 }
